src/test/ui/issue-35675.stderr
error[E0412]: cannot find type `Apple` in this scope
  --> $DIR/issue-35675.rs:20:29
   |
20 | fn should_return_fruit() -> Apple {
   |                             ^^^^^
   |                             |
   |                             not found in this scope
   |                             help: you can try using the variant's enum: `Fruit`

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:23:5
   |
23 |     Apple(5)
   |     ^^^^^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
12 | use Fruit::Apple;
   |

error[E0573]: expected type, found variant `Fruit::Apple`
  --> $DIR/issue-35675.rs:28:33
   |
28 | fn should_return_fruit_too() -> Fruit::Apple {
   |                                 ^^^^^^^^^^^^
   |                                 |
   |                                 not a type
   |                                 help: you can try using the variant's enum: `Fruit`

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:31:5
   |
31 |     Apple(5)
   |     ^^^^^ not found in this scope
   |
help: possible candidate is found in another module, you can import it into scope
   |
12 | use Fruit::Apple;
   |

error[E0412]: cannot find type `Variant3` in this scope
  --> $DIR/issue-35675.rs:36:13
   |
36 | fn bar() -> Variant3 {
   |             ^^^^^^^^
   |             |
   |             not found in this scope
   |             help: you can try using the variant's enum: `x::Enum`

error: aborting due to 5 previous errors

